--- a/DoSport/DoSport/Resourses/Info.plist
+++ b/DoSport/DoSport/Resourses/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Accept to give Location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please accept to give Location</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProDisplay-Regular.ttf</string>
