--- a/DoSport/Podfile
+++ b/DoSport/Podfile
@@ -10,7 +10,8 @@ target 'DoSport' do
   pod 'YandexMapsMobile', ’4.0.0-full’
   pod 'SwiftLint'
   pod 'SnapKit', '~> 5.0.0'
-  pod 'SDWebImage', '~> 5.0'
   pod 'RangeSeekSlider'
   pod 'FSCalendar'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Messaging'
 end
