--- a/DoSport/DoSport/Resourses/Info.plist
+++ b/DoSport/DoSport/Resourses/Info.plist
@@ -31,6 +31,8 @@
 	<string>903989686814631</string>
 	<key>FacebookDisplayName</key>
 	<string>DoSportDemo</string>
+    <key>FacebookAutoLogAppEventsEnabled</key>
+    <false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
