--- a/DoSport/DoSport/Resourses/Info.plist
+++ b/DoSport/DoSport/Resourses/Info.plist
@@ -23,7 +23,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb903989686814631</string>
+				<string>fb454820405663959</string>
 			</array>
 		</dict>
 		<dict>
@@ -46,11 +46,11 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>FacebookAppID</key>
-	<string>903989686814631</string>
+	<string>454820405663959</string>
 	<key>FacebookAutoLogAppEventsEnabled</key>
 	<false/>
 	<key>FacebookDisplayName</key>
-	<string>DoSportDemo</string>
+	<string>DoSport</string>
 	<key>FirebaseMessagingAutoInitEnabled</key>
 	<string>NO</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -101,5 +101,24 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
