Настройка под M1 и мелкие исправления
Фейсбук теперь в pods

--- a/DoSport/Podfile
+++ b/DoSport/Podfile
@@ -11,4 +11,15 @@ target 'DoSport' do
   pod 'SnapKit', '~> 5.0.0'
   pod 'GoogleSignIn'
   pod 'FSCalendar'
+  pod 'FBSDKCoreKit'
+  pod 'FBSDKLoginKit'
+  pod 'FBSDKShareKit'
+end
+
+post_install do |installer|
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+    config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+  end
 end
